--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,7 +1,7 @@
 <table>
     <tbody>
         <tr *ngFor="let row of cells">
-            <td *ngFor="let cell of row">{{cell.bomb}}</td>
+            <td *ngFor="let cell of row">{{cell.bomb}}0</td>
         </tr>
     </tbody>
 </table>
