--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
-<app-board></app-board>
+<div class="flex flex-col h-screen">
+  <h1 class="text-3xl font-bold underline">
+    Bomb Sweeper
+  </h1>
+  <app-board class="flex h-full justify-center self-center"></app-board>
+</div>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
