--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col h-screen">
-  <h1 class="text-3xl font-bold underline">
+<div class="flex flex-col h-screen bg-slate-800" >
+  <h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2">
     Bomb Sweeper
   </h1>
   <app-board class="flex h-full justify-center self-center"></app-board>
