--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col h-fit justify-center p-8 mt-20 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50">
     <app-infobar #infobar (levelChanged)="onLevelChanged($event)"></app-infobar>
-    <table>
-        <tbody>
+    <table class="border-separate border-spacing-px">
+        <tbody >
             <tr *ngFor="let row of cells">
-                <td *ngFor="let cell of row" class="text-center hover:opacity-80" (click)="checkCell(cell)" (contextmenu)="flag(cell,$event)" [ngClass]="{'clear': cell.status === 'clear', 'flag ring-2 ring-blue-300 ring-inset' : cell.status === 'flag', 'bomb' : cell.status === 'clear' && cell.bomb, 'p-1 bg-slate-300': cell.status==='open' }">
+                <td *ngFor="let cell of row" class="text-center hover:opacity-80 rounded-sm" (click)="checkCell(cell)" (contextmenu)="flag(cell,$event)" [ngClass]="{'clear': cell.status === 'clear', 'flag ring-2 ring-blue-300 ring-inset' : cell.status === 'flag', 'bomb' : cell.status === 'clear' && cell.bomb, 'p-1 bg-sky-400': cell.status==='open' }">
                     <span *ngIf="cell.bomb && cell.status === 'clear'" class="material-symbols-outlined">coronavirus</span>
                     <span *ngIf="!cell.bomb && cell.status === 'clear' && cell.proximityBombs" class="font-bold" [ngClass]="{'text-sky-500': cell.proximityBombs === 1, 'text-emerald-500': cell.proximityBombs === 2, 'text-orange-500': cell.proximityBombs === 3, 'text-cyan-700': cell.proximityBombs === 4, 'text-red-600': cell.proximityBombs === 5}">{{cell.proximityBombs}}</span>
                     <span *ngIf="cell.status === 'flag'" class="material-symbols-outlined">flag</span>
