dialog result update

--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -13,3 +13,5 @@
     </table>
     <button (click)="reset()" class="bg-blue-500 text-white mt-6 p-4 rounded-lg hover:opacity-80">Reset</button>
 </div>
+
+<app-dialog-result *ngIf="win || lose" [win]="win" [lose]="lose" [timer]="infobar.timer.toString()"></app-dialog-result>
