--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-fit justify-center p-8 mt-20 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50">
+<div class="flex flex-col h-fit justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50">
     <app-infobar #infobar (levelChanged)="onLevelChanged($event)"></app-infobar>
     <table class="border-separate border-spacing-px">
         <tbody >
@@ -14,4 +14,4 @@
     <button (click)="reset()" class="bg-blue-500 text-white mt-6 p-4 rounded-lg hover:opacity-80">Reset</button>
 </div>
 
-<app-dialog-result *ngIf="win || lose" [win]="win" [lose]="lose" [timer]="infobar.timer.toString()"></app-dialog-result>
+<app-dialog-result *ngIf="win || lose" [win]="win" [lose]="lose" [timer]="infobar.timer.toString()" (resetEvent)="reset()"></app-dialog-result>
