--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="h-screen bg-scroll bg-slate-800">
+<div class="flex flex-col h-screen bg-slate-800">
   <h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2">
     Bomb Sweeper
   </h1>
-  <main class="flex flex-1 flex-col space-evenly">
-    <app-board class="flex h-full justify-center self-center"></app-board>
+  <main class="flex flex-col grow p-8">
+    <app-board class="flex justify-center self-center"></app-board>
   </main>
 </div>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
