--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-fit justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50">
+<div id="card" class="flex flex-col h-fit justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50">
     <app-infobar #infobar (levelChanged)="onLevelChanged($event)"></app-infobar>
     <table class="border-separate border-spacing-px">
         <tbody >
