--- a/src/app/game/board/board.component.scss
+++ b/src/app/game/board/board.component.scss
@@ -2,6 +2,8 @@ td {
     border: 1px solid black;
     height: 40px;
     width: 40px;
+    min-width: 40px;
+    min-height: 40px;
     // background-color: rgb(185, 184, 184);
 }
 
