--- a/src/app/game/dialog-result/dialog-result.component.html
+++ b/src/app/game/dialog-result/dialog-result.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-container flex flex-col justify-center items-center">
     <div class="result-container items-center">
-        <h1 *ngIf="win">Win !!! Your time is {{timer}} secondes !</h1>
-        <h1 *ngIf="lose">You lose !!! Vous êtes vraiment trop thibaud !</h1>
+        <h1 *ngIf="win">You win ! Your time is {{timer}} secondes !</h1>
+        <h1 *ngIf="lose">You lose ! Try again !</h1>
     </div>
     <button type="button" (click)="emitReset()" class="inline-block text-xl text-white border-solid border-2 rounded-md border-white px-4 py-2 mt-2 hover:opacity-50">New Game</button>
 </div>
