--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -4,9 +4,10 @@
         <tbody >
             <tr *ngFor="let row of cells">
                 <td *ngFor="let cell of row" class="text-center hover:opacity-80 rounded-sm" (click)="checkCell(cell)" (contextmenu)="flag(cell,$event)" [ngClass]="{'clear': cell.status === 'clear', 'flag ring-2 ring-blue-300 ring-inset' : cell.status === 'flag', 'bomb' : cell.status === 'clear' && cell.bomb, 'p-1 bg-sky-400': cell.status==='open' }">
-                    <span *ngIf="cell.bomb && cell.status === 'clear'" class="material-symbols-outlined align-middle">coronavirus</span>
+                    <fa-icon *ngIf="cell.bomb && cell.status === 'clear'" class="align-middle text-white" [icon]="faBomb"></fa-icon>
                     <span *ngIf="!cell.bomb && cell.status === 'clear' && cell.proximityBombs" class="font-bold align-middle" [ngClass]="{'text-sky-500': cell.proximityBombs === 1, 'text-emerald-500': cell.proximityBombs === 2, 'text-orange-500': cell.proximityBombs === 3, 'text-cyan-700': cell.proximityBombs === 4, 'text-red-600': cell.proximityBombs === 5}">{{cell.proximityBombs}}</span>
-                    <span *ngIf="cell.status === 'flag'" class="material-symbols-outlined align-middle">flag</span>
+                    <!-- <span *ngIf="cell.status === 'flag'" class="material-symbols-outlined align-middle">flag</span> -->
+                    <fa-icon *ngIf="cell.status === 'flag'" class="align-middle" [icon]="faFlag"></fa-icon>
                 </td>
             </tr>
         </tbody>
