--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 	<h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2">Bomb Sweeper</h1>
 	<main class="flex flex-col grow p-8 min-h-fit">
 		<app-score-form></app-score-form>
+		<app-scores-table></app-scores-table>
 		<app-board class="flex justify-center self-center min-h-fit"></app-board>
 	</main>
 </div>
