--- a/src/app/game/score-form/score-form.component.html
+++ b/src/app/game/score-form/score-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
 	<input type="text" formControlName="pseudo" />
 	<br />
-	<p>Your time is {{ timer }} secondes ! on level {{ level }}</p>
+	<p>Your time is {{ timer }} secondes on level {{ level }}</p>
 	<input type="hidden" formControlName="timer" />
 	<input type="hidden" formControlName="level" />
 	<button type="submit" (click)="onSubmit(form)">Save</button>
