--- a/src/app/game/scores-table/scores-table.component.html
+++ b/src/app/game/scores-table/scores-table.component.html
@@ -1,1 +1,41 @@
-<p>scores-table works!</p>
+<div class="flex flex-row">
+	<table>
+		<thead>
+			<tr>
+				<th>EASY</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let row of easyScores">
+				<td>{{ row.pseudo }}</td>
+				<td>{{ row.timer }}</td>
+			</tr>
+		</tbody>
+	</table>
+	<table>
+		<thead>
+			<tr>
+				<th>MEDIUM</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let row of mediumScores">
+				<td>{{ row.pseudo }}</td>
+				<td>{{ row.timer }}</td>
+			</tr>
+		</tbody>
+	</table>
+	<table>
+		<thead>
+			<tr>
+				<th>HARD</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let row of hardScores">
+				<td>{{ row.pseudo }}</td>
+				<td>{{ row.timer }}</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
