--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="flex flex-col min-h-screen bg-slate-800 min-w-fit">
-  <h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2">
-    Bomb Sweeper
-  </h1>
-  <main class="flex flex-col grow p-8 min-h-fit">
-    <app-board class="flex justify-center self-center min-h-fit"></app-board>
-  </main>
+	<header class="flex flex-row">
+		<h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2 grow">Bomb Sweeper</h1>
+		<app-navbar class="px-4 pt-2"></app-navbar>
+	</header>
+
+	<main class="flex flex-col grow p-8 min-h-fit">
+		<app-board class="flex justify-center self-center min-h-fit"></app-board>
+	</main>
 </div>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
