--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 		<app-navbar class="px-4 pt-2"></app-navbar>
 	</header>
 	<main class="flex flex-col grow p-8 min-h-fit">
-		<app-board class="flex justify-center self-center min-h-fit"></app-board>
+		<!-- <app-board class="flex justify-center self-center min-h-fit"></app-board> -->
+		<router-outlet></router-outlet>
 	</main>
 </div>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
