--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col min-h-screen bg-slate-800 min-w-fit">
 	<header class="flex flex-row">
-		<h1 class="text-3xl font-bold text-gray-400 pl-2 pt-2 grow">Bomb Sweeper</h1>
+		<h1 class="text-3xl font-bold text-white pl-2 pt-2 grow">Bomb Sweeper</h1>
 		<app-navbar class="px-4 pt-2"></app-navbar>
 	</header>
 	<main class="flex flex-col grow p-8 min-h-fit">
