--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+	font-family: hisky;
+	src: url(assets/fonts/HISKYF21.ttf) format("opentype");
+}
