--- a/src/app/game/navbar/navbar.component.html
+++ b/src/app/game/navbar/navbar.component.html
@@ -1,14 +1,12 @@
 <nav flex>
 	<ul class="flex flex-row gap-3 text-xl font-bold text-white">
-		<li>
-			<a
-				routerLink=""
-				class="pb-1"
-				routerLinkActive="border-b-2 border-white"
-				[routerLinkActiveOptions]="{ exact: true }"
+		<li class="p-2 rounded-sm hover:bg-sky-700 ease-in-out duration-300">
+			<a routerLink="" class="pb-1" routerLinkActive="border-b border-white" [routerLinkActiveOptions]="{ exact: true }"
 				>Game</a
 			>
 		</li>
-		<li><a routerLink="/high-scores" class="pb-1" routerLinkActive="border-b-2 border-white">High Scores</a></li>
+		<li class="p-2 rounded-sm hover:bg-sky-700 ease-in-out duration-300">
+			<a routerLink="/high-scores" class="pb-1" routerLinkActive="border-b border-white">High Scores</a>
+		</li>
 	</ul>
 </nav>
