rnak and save only if top 50

--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -52,5 +52,6 @@
 		[timer]="infobar.timer.toString()"
 		(resetEvent)="reset()"
 		[level]="currentLevel"
+		[rank]="rank"
 	></app-dialog-result>
 </div>
