--- a/src/app/game/scores-table/scores-table.component.html
+++ b/src/app/game/scores-table/scores-table.component.html
@@ -1,6 +1,6 @@
 <h2 class="text-5xl font-bold text-amber-300 pl-2 pt-2 text-center">High Scores</h2>
-<div class="p-6 grid grid-cols-3 place-content-around text-center gap-4">
-	<table class="table-fixed bg-transparent/25 w-full p-2">
+<div class="p-6 flex flex-row flex-wrap place-content-around text-center gap-4">
+	<table class="table-fixed bg-transparent/25 p-2 grow">
 		<thead>
 			<tr>
 				<th colspan="2" class="text-2xl text-sky-400">EASY</th>
@@ -17,7 +17,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<table class="table-fixed bg-transparent/25 w-full">
+	<table class="table-fixed bg-transparent/25 grow">
 		<thead>
 			<tr>
 				<th colspan="2" class="text-2xl text-sky-400">MEDIUM</th>
@@ -34,7 +34,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<table class="table-fixed bg-transparent/25 w-full">
+	<table class="table-fixed bg-transparent/25 grow">
 		<thead>
 			<tr>
 				<th colspan="2" class="text-2xl text-sky-400">HARD</th>
