loader work in progress

--- a/src/app/game/score-form/score-form.component.html
+++ b/src/app/game/score-form/score-form.component.html
@@ -12,6 +12,7 @@
 	<input type="hidden" formControlName="level" />
 	<div class="flex space-x-4 mt-2">
 		<button
+			*ngIf="!loading"
 			[disabled]="!form.get('pseudo')?.value"
 			type="submit"
 			(click)="onSubmit(form)"
@@ -20,11 +21,13 @@
 			Save and New Game
 		</button>
 		<button
+			*ngIf="!loading"
 			type="button"
 			(click)="emitReset()"
 			class="inline-block text-xl text-white border-solid border-2 rounded-md border-white px-4 py-2 mt-2 hover:opacity-50"
 		>
 			New Game
 		</button>
+		<app-loader *ngIf="loading"></app-loader>
 	</div>
 </form>
