loader style update

--- a/src/app/game/loader/loader.component.scss
+++ b/src/app/game/loader/loader.component.scss
@@ -3,8 +3,8 @@
 	border-left: 8px solid blue;
 	border-top: 8px solid blue;
 	border-right: 8px solid transparent;
-	width: 100px;
-	height: 100px;
+	width: 5vh;
+	height: 5vh;
 	border-radius: 50%;
 	display: block;
 	animation: rotation 2s infinite linear;
