--- a/src/app/game/score-form/score-form.component.html
+++ b/src/app/game/score-form/score-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="mt-4">
+<form *ngIf="!loading" [formGroup]="form" class="mt-4">
 	<div class="input-box">
 		<input class="ml-2 p-1 rounded-sm focus:outline-none" id="pseudoInput" type="text" formControlName="pseudo" />
 		<label
@@ -12,7 +12,6 @@
 	<input type="hidden" formControlName="level" />
 	<div class="flex space-x-4 mt-2">
 		<button
-			*ngIf="!loading"
 			[disabled]="!form.get('pseudo')?.value"
 			type="submit"
 			(click)="onSubmit(form)"
@@ -21,13 +20,12 @@
 			Save and New Game
 		</button>
 		<button
-			*ngIf="!loading"
 			type="button"
 			(click)="emitReset()"
 			class="inline-block text-xl text-white border-solid border-2 rounded-md border-white px-4 py-2 mt-2 hover:opacity-50"
 		>
 			New Game
 		</button>
-		<app-loader *ngIf="loading"></app-loader>
 	</div>
 </form>
+<app-loader *ngIf="loading"></app-loader>
