--- a/src/app/game/scores-table/scores-table.component.html
+++ b/src/app/game/scores-table/scores-table.component.html
@@ -6,14 +6,14 @@
 				<th colspan="2" class="text-2xl text-sky-400">EASY</th>
 			</tr>
 			<tr>
-				<th class="text-2xl text-sky-400">PLAYER</th>
-				<th class="text-2xl text-sky-400">TIME</th>
+				<th class="text-2xl text-sky-400 w-1/2">PLAYER</th>
+				<th class="text-2xl text-sky-400 w-1/2">TIME</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr *ngFor="let row of easyScores">
-				<td class="text-xl">{{ row.pseudo | uppercase }}</td>
-				<td class="text-xl">{{ row.timer }}</td>
+				<td class="text-xl h-8">{{ row.pseudo | uppercase }}</td>
+				<td class="text-xl h-8">{{ row.timer }}</td>
 			</tr>
 		</tbody>
 	</table>
@@ -23,14 +23,14 @@
 				<th colspan="2" class="text-2xl text-sky-400">MEDIUM</th>
 			</tr>
 			<tr>
-				<th class="text-2xl text-sky-400">PLAYER</th>
-				<th class="text-2xl text-sky-400">TIME</th>
+				<th class="text-2xl text-sky-400 w-1/2">PLAYER</th>
+				<th class="text-2xl text-sky-400 w-1/2">TIME</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr *ngFor="let row of mediumScores">
-				<td class="text-xl">{{ row.pseudo | uppercase }}</td>
-				<td class="text-xl">{{ row.timer }}</td>
+				<td class="text-xl h-8">{{ row.pseudo | uppercase }}</td>
+				<td class="text-xl h-8">{{ row.timer }}</td>
 			</tr>
 		</tbody>
 	</table>
@@ -40,8 +40,8 @@
 				<th colspan="2" class="text-2xl text-sky-400">HARD</th>
 			</tr>
 			<tr>
-				<th class="text-2xl text-sky-400">PLAYER</th>
-				<th class="text-2xl text-sky-400">TIME</th>
+				<th class="text-2xl text-sky-400 w-1/2">PLAYER</th>
+				<th class="text-2xl text-sky-400 w-1/2">TIME</th>
 			</tr>
 		</thead>
 		<tbody>
