--- a/src/app/game/infobar/infobar.component.html
+++ b/src/app/game/infobar/infobar.component.html
@@ -1,18 +1,15 @@
 <div class="flex flex-row pb-4 place-content-evenly">
-    <select
-        class="bg-white p-2 rounded-lg info-item"
-        (change)="changeLevel($event)"
-    >
-        <option *ngFor="let level of levels" [value]="level.value">
-            {{ level.label }}
-        </option>
-    </select>
-    <div class="bg-white p-2 rounded-lg text-center info-item">
-        <fa-icon class="align-middle pr-1" [icon]="faFlag"></fa-icon
-        ><span class="text-lg align-middle">{{ flagCount }}</span>
-    </div>
-    <div class="bg-white p-2 rounded-lg text-center info-item">
-        <span class="material-symbols-outlined align-middle">timer</span
-        ><span class="text-lg align-middle">{{ displayedTimer }}</span>
-    </div>
+	<select class="bg-white p-2 rounded-lg info-item border-r-4 border-transparent" (change)="changeLevel($event)">
+		<option *ngFor="let level of levels" [value]="level.value">
+			{{ level.label }}
+		</option>
+	</select>
+	<div class="bg-white p-2 rounded-lg text-center info-item">
+		<fa-icon class="align-middle pr-1" [icon]="faFlag"></fa-icon
+		><span class="pl-2 text-lg align-middle">{{ flagCount }}</span>
+	</div>
+	<div class="bg-white p-2 rounded-lg text-center info-item">
+		<span class="material-symbols-outlined align-middle">timer</span
+		><span class="pl-2 text-lg align-middle">{{ displayedTimer }}</span>
+	</div>
 </div>
