--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<div class="flex flex-col h-screen w-screen bg-slate-800">
-	<header class="flex flex-row">
+<div class="flex flex-col min-h-screen w-screen bg-slate-800">
+	<header class="flex flex-row flex-wrap">
 		<h1 class="text-3xl font-bold text-white pl-2 pt-2 grow whitespace-nowrap">Bomb Sweeper</h1>
 		<app-navbar class="px-4 pt-2"></app-navbar>
 	</header>
-	<main class="flex flex-col grow p-8 min-h-fit">
+	<main class="flex flex-col flex-1 h-full justify-center items-center">
 		<!-- <app-board class="flex justify-center self-center min-h-fit"></app-board> -->
 		<router-outlet></router-outlet>
 	</main>
 </div>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
