--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen w-screen bg-slate-800">
+<div class="flex flex-col min-h-screen min-w-full w-fit bg-slate-800">
 	<header class="flex flex-row flex-wrap">
 		<h1 class="text-3xl font-bold text-white pl-2 pt-2 grow whitespace-nowrap">Bomb Sweeper</h1>
 		<app-navbar class="px-4 pt-2"></app-navbar>
