--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,9 +1,9 @@
-<div class="flex justify-center self-center min-h-fit p-8">
+<div class="flex justify-center self-center">
 	<div
 		id="card"
-		class="flex flex-col h-fit justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50"
+		class="flex flex-col items-center justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50"
 	>
-		<app-infobar #infobar (levelChanged)="onLevelChanged($event)"></app-infobar>
+		<app-infobar #infobar (levelChanged)="onLevelChanged($event)" class="w-full"></app-infobar>
 		<table class="border-separate border-spacing-px">
 			<tbody>
 				<tr *ngFor="let row of cells">
@@ -41,7 +41,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<button (click)="reset()" class="bg-blue-500 text-white mt-6 p-4 rounded-lg hover:opacity-80">Reset</button>
+		<button (click)="reset()" class="bg-blue-500 text-white w-full mt-6 p-4 rounded-lg hover:opacity-80">Reset</button>
 	</div>
 </div>
 
