--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -4,7 +4,7 @@
 		class="flex flex-col items-center justify-center px-8 py-4 bg-sky-900 border-2 border-indigo-600/50 rounded-2xl shadow-2xl shadow-indigo-500/50"
 	>
 		<app-infobar #infobar (levelChanged)="onLevelChanged($event)" class="w-full"></app-infobar>
-		<table class="border-separate border-spacing-px">
+		<table [ngClass]="{'hard-grid': currentLevel === 'hard'}" class="border-separate border-spacing-px mx-auto">
 			<tbody>
 				<tr *ngFor="let row of cells">
 					<td
