--- a/src/app/game/board/board.component.scss
+++ b/src/app/game/board/board.component.scss
@@ -7,7 +7,7 @@
 }
 
 td {
-    --size: clamp(18px, 2.8vmin, 30px); 
+    --size: clamp(25px, 3vmin, 30px); 
 
     width: var(--size);
     height: var(--size);
@@ -22,6 +22,10 @@ td {
     vertical-align: middle;
     text-align: center;
     font-size: calc(var(--size) * 0.6); 
+}
+
+.hard-grid td {
+    --size: clamp(16px, 2.8vmin, 30px);
 }
 
 table {
